nuevas tablas y sus relaciones

--- a/templates/Asterix/listPersonajes.html.twig
+++ b/templates/Asterix/listPersonajes.html.twig
@@ -10,8 +10,8 @@
                     <div class="card-body">
                         <h4 class="card-title">{{ personaje.name }}</h4>
                         <h6 class="card-text">{{ personaje.role }}</h6>
-                        {# <a href="{{ path('getPokemon', {'id': pokemon.id}) }}" class="btn btn-primary">Más Info</a>
-                        {% if is_granted("ROLE_ADMIN")%}
+                        <a href="{{ path('personaje', {'id': personaje.id}) }}" class="btn btn-primary">Más Info</a>
+                        {# {% if is_granted("ROLE_ADMIN")%}
                         <a href="{{ path('editPokemon', {'id': pokemon.id}) }}" class="btn 
                         btn-primary">Editar</a>
                         {% endif %} #}
