--- a/templates/Asterix/personaje.html.twig
+++ b/templates/Asterix/personaje.html.twig
@@ -10,6 +10,13 @@
                     <div class="card-body">
                         <h4 class="card-title">{{ personaje.name }}</h4>
                         <h6 class="card-text">{{ personaje.role }}</h6>
+                        <div class="row">
+                            <ul>
+                              {% for pelicula in personaje.peliculas %}
+                                <li>{{ pelicula.title }}</li>
+                              {% endfor %}
+                            </ul>
+                        </div>
                         {# <a href="{{ path('getPokemon', {'id': pokemon.id}) }}" class="btn btn-primary">Más Info</a>
                         {% if is_granted("ROLE_ADMIN")%}
                         <a href="{{ path('editPokemon', {'id': pokemon.id}) }}" class="btn 
