--- a/templates/Asterix/plantilla.html.twig
+++ b/templates/Asterix/plantilla.html.twig
@@ -16,8 +16,8 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
                         <a class="nav-link active" href="{{ path("personajes") }}">Inicio <span class="sr-only">(current)</span></a>
-                        <a class="nav-link" href=" {{ path("personajes") }} ">Listar Personajes</a>
-                        <a class="nav-link" href="#">Crear Personaje</a>
+                        <a class="nav-link" href=" {{ path("personajes") }} ">Personajes</a>
+                        <a class="nav-link" href="{{ path("insertPersonaje") }}">Crear Personaje</a>
                     </div>
                 </div>
             </nav>
