--- a/templates/Asterix/plantilla.html.twig
+++ b/templates/Asterix/plantilla.html.twig
@@ -18,6 +18,8 @@
                         <a class="nav-link active" href="{{ path("personajes") }}">Inicio <span class="sr-only">(current)</span></a>
                         <a class="nav-link" href=" {{ path("personajes") }} ">Personajes</a>
                         <a class="nav-link" href="{{ path("insertPersonaje") }}">Crear Personaje</a>
+                        <a class="nav-link" href=" {{ path("peliculas") }} ">Peliculas</a>
+                        <a class="nav-link" href="{{ path("insertPelicula") }}">Crear Pelicula</a>
                     </div>
                 </div>
             </nav>
